# hypemm

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  THESIS.md  analysis.py  analyze.py  config.toml  display.py  logger.py  monitor.py  pyproject.toml  requirements.txt
configs/: live_min.toml  optimized.toml  optimized_hurst.toml  original.toml  paper_optimized.toml  paper_original_3_ada.toml  paper_testnet.toml
docs/: CONVENTIONS.md  CURRENT_STATE.md  LIVE_DEPLOYMENT.md  METRICS.md  RUNBOOK.md
feeds/: binance.py  hyperliquid.py
notebooks/: risk_analysis.ipynb  risk_analysis_reservoir.ipynb  walkforward_analysis.ipynb
scripts/: calibrate.py  fetch_data.py  launch.sh  paper_original_3_ada.sh  validate_backtest.py
src/hypemm/: cli.py  (+23 more)
tests/: conftest.py  test_backtest.py  test_book_vwap.py  test_config.py  test_correlation.py  test_correlation_analysis.py  test_correlation_gate.py  test_dashboard_loader.py  test_display.py  test_engine.py  test_funding.py  test_hl_meta.py  test_hl_sign.py  test_live_adapter.py  test_loader.py  test_models.py  test_orderbook.py  test_paired_configs.py  test_pnl.py  test_price_buffer.py  test_reconcile.py  test_repo_structure.py  test_risk.py  test_signals.py  test_state.py  test_stats.py  test_sweep.py  test_synthesize.py  test_trade_log.py  test_walkforward.py  test_zscore.py
verification/: STRATEGY.md  config.py  fetch_data.py  paper_trade.py  risk_analysis.ipynb  risk_analysis_reservoir.ipynb  step1_backtest.py  step1b_filtered.py  step2_correlation.py  step3_orderbook.py  synthesize.py
(+34 files in other folders)
