[project]
name = "hypemm"
version = "0.1.0"
description = "Cross-perpetual statistical arbitrage on Hyperliquid"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
]

[project.scripts]
hypemm = "hypemm.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypemm"]

[tool.black]
line-length = 99
target-version = ["py313"]

[tool.ruff]
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["hypemm"]

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
